deployment/minikube/grafana-ingress-minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-minikube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: grafana.astroplant-daphne.sda-projects.nl
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
